# pydantic_tfl_api

./: README.md  TfL-python-api.LICENSE  example.py  pyproject.toml  renovate.json  routeByMode_tube_serviceTypes_night_Line.json
.devcontainer/: devcontainer.json
.github/workflows/: build_and_publish.yml  bump_version.yml  codeql.yml  dependency-review.yml  deploy_build_artifact.yaml  deploy_bump_version.yml  deploy_to_pypi.yml  deploy_workflow_wrapper.yml  run_pytest.yml  test-workflow.yml  test_build_bump_version.yml  test_codeql.yml  test_dependency_review.yml  test_run_pytest.yml  test_workflow_wrapper.yml
pydantic_tfl_api/: __init__.py  api_token.py  client.py  config.py  rest_client.py
pydantic_tfl_api/models/: __init__.py  additional_properties.py  affected_route.py  api_error.py  crowding.py  disruption.py  identifier.py  line.py  line_group.py  line_mode_group.py  line_status.py  matched_stop.py  mode.py  ordered_route.py  passenger_flow.py  prediction.py  prediction_timing.py  route_section.py  route_section_naptan_entry_sequence.py  route_sequence.py  service_type.py  stop_point.py  stop_points_response.py  train_loading.py  validity_period.py
tests/: config_for_tests.py  store_tfl_status.py  test_basic_tests.py  test_client.py  test_pydantic_models.py
tests/tfl_responses/: arrivalsByLineId_1_4_None_Prediction.json  arrivalsByLineId_1_4_None_Prediction_expected.json  arrivalsByLineId_victoria_None_Prediction.json  arrivalsByLineId_victoria_None_Prediction_expected.json  lineDisruptionsByLineId_14_None_Line.json  lineMetaModes_None_None_Mode.json  (+58 more)
(+3 files in other folders)
