[tool.poetry]
name = "pydantic-tfl-api"
version = "0.25.9"
description = "A Pydantic-based wrapper for the TfL Unified API https://api.tfl.gov.uk/. Not associated with or endorsed by TfL."
authors = ["Rob Aleck <mnbf9rca@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mnbf9rca/pydantic_tfl_api"
repository = "https://github.com/mnbf9rca/pydantic_tfl_api"
keywords = ["pydantic", "tfl", "tfl-api", "transport-for-london", "unified-api"]


[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.8.2"
requests = ">=2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
Flake8-pyproject = "^1.2.3"
coverage = {extras = ["toml"], version = "^7.5.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/.tox/*",
    "*/.eggs/*",
    "*/.vscode-remote/*"
]
relative_files = true

[tool.pytest.ini_options]
addopts = "--cov --cov-branch --cov-report term-missing -vv --strict-markers -rfE"

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "venv"
]